--- a/index.html
+++ b/index.html
@@ -457,11 +457,11 @@
                         <strong>Processo Innovativo a 2 Fasi:</strong>
                     </p>
                     <div style="background: rgba(255,255,255,0.2); padding: 20px; border-radius: 10px; margin: 20px 0;">
-                        <p><strong>1. Auto-idrolisi</strong></p>
+                        <p><strong>1.</strong></p>
                         <p>Separazione delle componenti fibrose</p>
                     </div>
                     <div style="background: rgba(255,255,255,0.2); padding: 20px; border-radius: 10px;">
-                        <p><strong>2. Processo Organosolv</strong></p>
+                        <p><strong>2.</strong></p>
                         <p>Ottimizzazione cellulosa/lignina</p>
                     </div>
                     <p style="margin-top: 20px; font-size: 0.95em;">
@@ -492,7 +492,7 @@
                 <div class="partner-card">
                     <h3 style="color: #667eea; margin-bottom: 20px;">Politecnico di Milano & Università Cattolica</h3>
                     <p><strong>Ruolo:</strong> Estrazione componenti fibrose</p>
-                    <p><strong>Tecnologia:</strong> Processo innovativo 2 fasi (auto-idrolisi + organosolv)</p>
+                    <p><strong>Tecnologia:</strong> Processo innovativo 2 fasi</p>
                     <p><strong>Vantaggio:</strong> Riferimento europeo per bioraffineria lignocellulosica</p>
                 </div>
 
