--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         /* HEADER SECTION - Main hero with brand colors from presentations */
         .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #667eea 0%, #042107 100%);
             color: white;
             padding: 80px 0;
             text-align: center;
