--- a/index.html
+++ b/index.html
@@ -444,8 +444,7 @@
                 <div class="input-materials">
                     <h3 style="margin-bottom: 25px; color: #4CAF50;">Input Materials</h3>
                     <ul class="materials-list">
-                        <li><strong>Trebbie di Birra</strong><br>110 ton/anno disponibili</li>
-                        <li><strong>Residui Agricoli</strong><br>20 ton/anno disponibili</li>
+                        <li><strong>Trebbie di Birra</strong><br>200 ton/anno disponibili</li>
                         <li><strong>Scarti di Pesce</strong><br>15 ton/anno disponibili</li>
                         <li><strong>Scarti da Floricoltura</strong><br>Fonti diversificate</li>
                     </ul>
@@ -487,35 +486,35 @@
             <h2 style="text-align: center; font-size: 2.5em; margin-bottom: 50px; color: #2c3e50;">
                 Ecosistema di Partnership Strategiche
             </h2>
-
-            <div class="partnership-grid">
+            
+          <div class="partnership-grid">
+            <div class="partner-card">
+                    <h3 style="color: #9c27b0; margin-bottom: 20px;">Birrifici Partner</h3>
+                    <p><strong>Fornitura:</strong> 600 kg/giorno di BSG garantite</p>
+                    <p><strong>Crescita:</strong> Ecosistema in costante espansione</p>
+                    <p><strong>Logistica:</strong> Filiera km 0 lombarda</p>
+                </div>
+            
                 <div class="partner-card">
                     <h3 style="color: #667eea; margin-bottom: 20px;">Politecnico di Milano & Università Cattolica</h3>
-                    <p><strong>Ruolo:</strong> Estrazione componenti fibrose</p>
-                    <p><strong>Tecnologia:</strong> Processo innovativo 2 fasi</p>
+                    <p><strong>Ruolo:</strong> Partner estrazione componenti fibrose</p>
+                    <p><strong>Tecnologia:</strong> Processo innovativo a 2 fasi</p>
                     <p><strong>Vantaggio:</strong> Riferimento europeo per bioraffineria lignocellulosica</p>
                 </div>
 
                 <div class="partner-card">
-                    <h3 style="color: #4CAF50; margin-bottom: 20px;">MixCycling</h3>
-                    <p><strong>Ruolo:</strong> Co-sviluppo compound</p>
+                    <h3 style="color: #4CAF50; margin-bottom: 20px;">Azienda compounding</h3>
+                    <p><strong>Ruolo:</strong> Co-sviluppo compound e scaling industriale</p>
                     <p><strong>Specializzazione:</strong> Partnership strategica per formulazioni innovative</p>
                     <p><strong>Capacità:</strong> Sviluppo materiali compositi avanzati</p>
                 </div>
 
-                <div class="partner-card">
-                    <h3 style="color: #FF9800; margin-bottom: 20px;">LATI</h3>
-                    <p><strong>Ruolo:</strong> Scaling industriale compound</p>
-                    <p><strong>Capacità:</strong> 40.000 ton/anno produttive</p>
-                    <p><strong>Esperienza:</strong> 2500+ formulazioni esistenti (Linea LATIGEA)</p>
+              <!-- Aggiungere scheda partner per fabbricazione prodotti -->
+              <div class="partner-card">
+                    <h3 style="color: #4CAF50; margin-bottom: 20px;">TBD</h3>
+                    <p><strong>Ruolo:</strong> Area funzionale di competenza </p>
                 </div>
 
-                <div class="partner-card">
-                    <h3 style="color: #9c27b0; margin-bottom: 20px;">Birrifici Partner</h3>
-                    <p><strong>Fornitura:</strong> 300 kg/giorno di BSG garantite</p>
-                    <p><strong>Crescita:</strong> Ecosistema in costante espansione</p>
-                    <p><strong>Logistica:</strong> Filiera km 0 lombarda</p>
-                </div>
             </div>
         </section>
 
