--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         /* HEADER SECTION - Main hero with brand colors from presentations */
         .hero {
-            background: linear-gradient(135deg, #667eea 0%, #042107 100%);
+            background: linear-gradient(135deg, #2e7d32 0%, #1b5e20 100%);
             color: white;
             padding: 80px 0;
             text-align: center;
@@ -100,7 +100,7 @@
         }
 
         .process-header {
-            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
+            background: linear-gradient(135deg, #388e3c 0%, #2e7d32 100%);
             color: white;
             padding: 40px;
             text-align: center;
@@ -119,7 +119,7 @@
         }
 
         .tech-core {
-            background: linear-gradient(135deg, #FF6B6B 0%, #EE5A24 100%);
+            background: linear-gradient(135deg, #424242 0%, #212121 100%);
             color: white;
             padding: 40px;
             border-radius: 20px;
@@ -150,7 +150,7 @@
         /* PARTNERSHIP SECTION - Based on slide 2 ecosystem */
         .partnership-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 30px;
             margin: 50px 0;
         }
@@ -161,7 +161,7 @@
             border-radius: 15px;
             box-shadow: 0 10px 25px rgba(0,0,0,0.1);
             transition: all 0.3s ease;
-            border-top: 4px solid #667eea;
+            border-top: 4px solid #2e7d32;
         }
 
         .partner-card:hover {
@@ -171,7 +171,7 @@
 
         /* MARKET ANALYSIS SECTION - New comprehensive market data */
         .market-analysis {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2e7d32 0%, #1b5e20 100%);
             color: white;
             border-radius: 20px;
             padding: 60px;
@@ -180,7 +180,7 @@
 
         .market-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 30px;
             margin: 40px 0;
         }
@@ -376,7 +376,7 @@
 
         /* CONTACT SECTION */
         .contact-section {
-            background: linear-gradient(135deg, #2c3e50 0%, #34495e 100%);
+            background: linear-gradient(135deg, #212121 0%, #424242 100%);
             color: white;
             text-align: center;
             padding: 60px 0;
@@ -385,7 +385,7 @@
         }
 
         .contact-button {
-            background: linear-gradient(135deg, #FF6B6B 0%, #EE5A24 100%);
+            background: linear-gradient(135deg, #4caf50 0%, #388e3c 100%);
             color: white;
             padding: 15px 30px;
             border: none;
