--- a/index.html
+++ b/index.html
@@ -720,9 +720,9 @@
                     <div class="timeline-content">
                         <div class="timeline-date">Q2 2026</div>
                         <h4>Primo Campione Materiale</h4>
-                        <p>Completamento processo di estrazione componenti fibrose con Politecnico di Milano e Università Cattolica. Prime formulazioni compound con MixCycling.</p>
+                        <p>Completamento processo di estrazione componenti fibrose con Politecnico di Milano e Università Cattolica. Prime formulazioni compound con Partner specializzati.</p>
                         <ul style="margin-top: 15px; text-align: left;">
-                            <li>Validazione processo 2-fasi (auto-idrolisi + organosolv)</li>
+                            <li>Validazione processo 2-fasi</li>
                             <li>Testing proprietà meccaniche e barriera</li>
                             <li>Certificazioni food-contact</li>
                         </ul>
@@ -733,9 +733,9 @@
                     <div class="timeline-content">
                         <div class="timeline-date">Q4 2026</div>
                         <h4>Impianto Pilota Operativo</h4>
-                        <p>Scaling a 300 kg/giorno di materia prima convertita. Partnership LATI per compound industriale e primi test di produzione bicchieri.</p>
+                        <p>Scaling a 30 kg/giorno di materia prima convertita. Partnership per compound industriale e primi test di produzione bicchieri.</p>
                         <ul style="margin-top: 15px; text-align: left;">
-                            <li>Capacità produttiva pilota: 100 ton/anno</li>
+                            <li>Capacità produttiva pilota: 6 ton/anno</li>
                             <li>Validazione supply chain trebbie</li>
                             <li>Prime campionature clienti B2B</li>
                         </ul>
@@ -746,7 +746,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">Q4 2027</div>
                         <h4>Bioraffineria Industriale</h4>
-                        <p>Scale-up completo con target 40.000 ton/anno. Lancio commerciale su tutti e tre i segmenti: eventi, vivaistica, alto consumo.</p>
+                        <p>Scale-up completo con target 200 ton/anno. Lancio commerciale su tutti e tre i segmenti: eventi, vivaistica, alto consumo.</p>
                         <ul style="margin-top: 15px; text-align: left;">
                             <li>Automazione completa linee produttive</li>
                             <li>Certificazioni EU per tutti i prodotti</li>
@@ -759,7 +759,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">2030</div>
                         <h4>Espansione Mercato EU</h4>
-                        <p>Consolidamento leadership Nord Italia e espansione in Europa. Target 5% quota SOM con ricavi €140M annui.</p>
+                        <p>Consolidamento leadership Nord Italia e espansione in Europa. Target 5% quota SOM.</p>
                         <ul style="margin-top: 15px; text-align: left;">
                             <li>Rete distribuzione pan-europea</li>
                             <li>Portfolio prodotti completo</li>
@@ -791,7 +791,7 @@
 
                     <div style="padding: 25px; border-left: 4px solid #FF9800;">
                         <h4 style="color: #FF9800; margin-bottom: 15px;">⚡ Time-to-Market</h4>
-                        <p>Partnership consolidate con LATI (40k ton/anno) e MixCycling permettono scaling rapido vs competitor che sviluppano da zero.</p>
+                        <p>Partnership consolidate (200 ton/anno) permettono scaling rapido vs competitor che sviluppano da zero.</p>
                     </div>
 
                     <div style="padding: 25px; border-left: 4px solid #9c27b0;">
@@ -834,7 +834,7 @@
             <div style="margin-top: 40px; opacity: 0.8;">
                 <p>🏭 <strong>Sede Operativa:</strong> Lombardia - Filiera Km 0</p>
                 <p>🤝 <strong>Partner Tecnologici:</strong> Politecnico Milano, Università Cattolica</p>
-                <p>🏭 <strong>Partner Industriali:</strong> LATI, MixCycling</p>
+                <p>🏭 <strong>Partner Industriali:</strong> To Be Announced</p>
             </div>
         </div>
     </footer>
