--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
                 <a href="mailto:hello@biophi.it" class="contact-button">
                     📧 hello@biophi.it
                 </a>
-                <a href="mailto:hellobiophi@gmail.com" class="contact-button">
+                <a href="mailto:hello@biophi.it" class="contact-button">
                     🚀 Richiedi Partnership
                 </a>
             </div>
