--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             background: linear-gradient(135deg, #212121 0%, #424242 100%);
             color: white;
             text-align: center;
-            padding: 60px 0;
+            padding-top: 60px 0;
             border-radius: 20px;
             margin: 50px 0;
         }
