--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             text-align: center;
             padding: 60px 0;
             border-radius: 20px;
-            margin: 50px 0;
+            margin-top: 50px 0;
         }
 
         .contact-button {
