--- a/index.html
+++ b/index.html
@@ -359,7 +359,10 @@
                 grid-template-columns: 1fr;
                 gap: 30px;
             }
-
+            .market-grid { 
+                grid-template-columns: 1fr; 
+                gap: 30px;
+            }
             .timeline::before {
                 left: 20px;
             }
@@ -373,6 +376,8 @@
                 grid-template-columns: 1fr;
             }
         }
+    
+}
 
         /* CONTACT SECTION */
         .contact-section {
