--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             <div class="vision-statement">
                 <h3 style="margin-bottom: 15px;">La Nostra Visione</h3>
                 <p style="font-size: 1.2em; font-style: italic;">
-                    "Le altre generazioni hanno inquinato il pianeta, noi lo nutriremo."
+                    "Un futuro dove ogni brindisi semina un nuovo inizio."
                 </p>
             </div>
         </div>
