--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 mb-4">
-                     <img src="https://images.unsplash.com/photo-1615196677587-c3702e7a1773?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" class="img-fluid rounded shadow" alt="Bioplastic Granules">
+                     <img src="Gemini_Generated_Image_bmqivdbmqivdbmqi.png" class="img-fluid rounded shadow" alt="Bioplastic Granules">
                 </div>
             </div>
             
@@ -378,3 +378,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
