--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
    <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="C:\Users\UX\OneDrive\BIOPHI\Sito-Web\Sito-Web\images\BioPhi - Logo.svg" alt="BioPhi - From Nature to Nature" class="navbar-logo">
+            <img src="images/BioPhi - Logo.svg" alt="BioPhi - From Nature to Nature" class="navbar-logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -276,7 +276,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 mb-4">
-                     <img src="Gemini_Generated_Image_bmqivdbmqivdbmqi.png" class="img-fluid rounded shadow" alt="Bioplastic Granules">
+                     <img src="images/Gemini_Generated_Image_bmqivdbmqivdbmqi.png" class="img-fluid rounded shadow" alt="Bioplastic Granules">
                 </div>
             </div>
             
@@ -378,4 +378,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
