--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 mb-4">
-                     <img src="image/biophiglass.png" class="img-fluid rounded shadow" alt="Bioplastic Granules">
+                     <img src="images/biophiglass" class="img-fluid rounded shadow" alt="Bioplastic Granules">
                 </div>
             </div>
             
@@ -378,6 +378,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
