--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
    <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="images/logo.svg" alt="BioPhi Logo" class="navbar-logo">
+            <img src="images/BioPhi - Logo.svg" alt="BioPhi Logo" class="navbar-logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -378,6 +378,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
