--- a/index.html
+++ b/index.html
@@ -368,8 +368,7 @@
             <h3>BioPhi</h3>
             <p>From Nature To Nature</p>
             <div class="mb-4">
-                <a href="#" class="mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
-                <a href="#" class="mx-2"><i class="fab fa-instagram fa-lg"></i></a>
+                <a href="https://www.linkedin.com/company/biophitaly/about/?viewAsMember=true" class="mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
             </div>
             <small>&copy; 2026 BioPhi. Tutti i diritti riservati.</small>
         </div>
@@ -378,6 +377,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
