--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     }
 
     .navbar-logo {
-        height: 45px; /* Altezza ottimale per la visibilità */
+        height: 120px; /* Altezza ottimale per la visibilità */
         width: auto;
         transition: transform 0.3s ease;
     }
@@ -368,7 +368,9 @@
             <h3>BioPhi</h3>
             <p>From Nature To Nature</p>
             <div class="mb-4">
-                <a href="https://www.linkedin.com/company/biophitaly/about/?viewAsMember=true" class="mx-2"><i class="fab fa-linkedin fa-lg"></i></a>
+               <a href="https://www.linkedin.com/company/biophi" target="_blank" class="mx-2 social-link"> 
+                   <i class="fab fa-linkedin fa-lg"></i>
+                </a>
             </div>
             <small>&copy; 2026 BioPhi. Tutti i diritti riservati.</small>
         </div>
@@ -377,6 +379,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
