--- a/index.html
+++ b/index.html
@@ -7,172 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
-    <style>
-        :root {
-            --primary-green: #6C9A46; /* Colore simile al logo BioPhi */
-            --dark-green: #2E4A21;
-            --light-bg: #f8f9fa;
-            --text-dark: #333;
-        }
+    <link rel="stylesheet" href="style.css">
 
-        body {
-            font-family: 'Open Sans', sans-serif;
-            color: var(--text-dark);
-            overflow-x: hidden;
-        }
-
-        h1, h2, h3, h4, h5 {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 700;
-        }
-
-        /* Navbar */
-        .navbar {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        .navbar-brand {
-        display: flex;
-        align-items: center;
-        padding: 5px 0;
-    }
-
-    .navbar-logo {
-        height: 90px; /* Altezza ottimale per la visibilità */
-        width: auto;
-        transition: transform 0.3s ease;
-    }
-
-    .navbar-brand:hover .navbar-logo {
-        transform: scale(1.05); /* Effetto leggero al passaggio del mouse */
-    }
-
-        .nav-link {
-            color: var(--text-dark);
-            font-weight: 600;
-        }
-        .nav-link:hover {
-            color: var(--primary-green);
-        }
-
-        /* Hero Section */
-        .hero-section {
-            background: linear-gradient(rgba(46, 74, 33, 0.7), rgba(46, 74, 33, 0.7)), url('https://images.unsplash.com/photo-1542601906990-24d4c16419d9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');
-            background-size: cover;
-            background-position: center;
-            color: white;
-            padding: 150px 0 100px 0;
-            text-align: center;
-        }
-        
-        .hero-btn {
-            background-color: var(--primary-green);
-            color: white;
-            padding: 12px 30px;
-            border-radius: 30px;
-            text-decoration: none;
-            font-weight: 600;
-            transition: all 0.3s;
-            border: none;
-        }
-        .hero-btn:hover {
-            background-color: white;
-            color: var(--primary-green);
-        }
-
-        /* Sections */
-        .section-padding {
-            padding: 80px 0;
-        }
-
-        .section-title {
-            text-align: center;
-            margin-bottom: 50px;
-        }
-        .section-title h2 {
-            color: var(--dark-green);
-            position: relative;
-            display: inline-block;
-            padding-bottom: 15px;
-        }
-        .section-title h2::after {
-            content: '';
-            position: absolute;
-            width: 50px;
-            height: 3px;
-            background-color: var(--primary-green);
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        /* Cards */
-        .feature-card {
-            background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.05);
-            transition: transform 0.3s;
-            height: 100%;
-            border-top: 5px solid var(--primary-green);
-        }
-        .feature-card:hover {
-            transform: translateY(-10px);
-        }
-        .icon-circle {
-            width: 70px;
-            height: 70px;
-            background-color: #e8f5e9;
-            color: var(--primary-green);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-
-        /* Timeline */
-        .timeline-step {
-            position: relative;
-            padding-left: 30px;
-            margin-bottom: 30px;
-            border-left: 2px solid var(--primary-green);
-        }
-        .timeline-step::before {
-            content: '';
-            position: absolute;
-            left: -6px;
-            top: 0;
-            width: 10px;
-            height: 10px;
-            background: var(--primary-green);
-            border-radius: 50%;
-        }
-
-        /* Footer */
-        footer {
-            background-color: var(--dark-green);
-            color: white;
-            padding: 50px 0 20px 0;
-        }
-        footer a {
-            color: #e8f5e9;
-            text-decoration: none;
-        }
-
-        /* Quote */
-        .quote-box {
-            background-color: var(--primary-green);
-            color: white;
-            padding: 40px;
-            border-radius: 20px;
-            font-style: italic;
-            font-size: 1.2rem;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
 
@@ -379,6 +215,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
