--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <h3>BioPhi</h3>
             <p>From Nature To Nature</p>
             <div class="mb-4">
-               <a href="https://www.linkedin.com/company/biophi" target="_blank" class="mx-2 social-link"> 
+               <a href="https://www.linkedin.com/company/biophitaly" target="_blank" class="mx-2 social-link"> 
                    <i class="fab fa-linkedin fa-lg"></i>
                 </a>
             </div>
@@ -214,6 +214,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
