--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <p><strong>Descrizione:</strong> Granulo termoplastico (pellet) ottenuto miscelando biomassa trattata con matrici biopolimeriche.</p>
                     <p><strong>Applicazioni:</strong> Stampaggio a iniezione ed estrusione film per packaging compostabile.</p>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-check text-success"></i> Ideale per aziende di trasformazione plastica</li>
+                        <li><i class="fas fa-check text-success"></i> Compound innovativo</li>
                         <li><i class="fas fa-check text-success"></i> Biodegradabilità programmabile</li>
                     </ul>
                 </div>
@@ -131,6 +131,22 @@
                     <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" class="img-fluid rounded shadow" alt="Lab Process">
                </div>
             </div>
+
+            <div class="row align-items-center">
+                <div class="col-lg-6 mb-4">
+                    <h3>Stream C: Prodotti Alto Consumo Biodegradabili</h3>
+                    <p><strong>Descrizione:</strong> Grazie alla nostra rete di partner il nostro obiettivo finale è lo sviluppo di prodotti bio-based e biodegradabili che possano chiudere il cerchio dell'economia circolare.</p>
+                    <p><strong>Applicazioni:</strong> Eventi sociali, vita quotidiana, ufficio.</p>
+                    <ul class="list-unstyled">
+                        <li><i class="fas fa-check text-success"></i> Sostituzione plastica monouso</li>
+                        <li><i class="fas fa-check text-success"></i> Rilascio nutrienti per il terreno</li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 mb-4">
+                     <img src="images/biophiglass.png" class="img-fluid rounded shadow" alt="Bioplastic Granules">
+                </div>
+            </div>
+            
         </div>
     </section>
 
@@ -214,6 +230,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
