--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6 mb-4">
-                     <img src="images/biophiglass.png" class="img-fluid rounded shadow" alt="Bioplastic Granules">
+                     <img src="images/Compound.JPG" class="img-fluid rounded shadow" alt="Bioplastic Granules">
                 </div>
             </div>
             
@@ -132,6 +132,8 @@
                </div>
             </div>
 
+            <hr class="my-5">
+            
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
                     <h3>Stream C: Prodotti Alto Consumo Biodegradabili</h3>
@@ -230,6 +232,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
