--- a/index.html
+++ b/index.html
@@ -88,4 +88,65 @@
                 <div>
                     <h3>Stream A: Granuli Bioplastici</h3>
                     <p><strong>Descrizione:</strong> Granulo termoplastico (pellet) ottenuto miscelando biomassa trattata con matrici biopolimeriche.</p>
-                    <p><strong>Applicazioni:</strong> Stamp
+                    <p><strong>Applicazioni:</strong> Stampaggio a iniezione ed estrusione film per packaging compostabile.</p>
+                </div>
+                <img src="images/Compound.JPG" class="img-responsive rounded shadow" alt="Bioplastic Granules">
+            </div>
+
+            <div class="grid-2 align-center mb-50 flex-reverse">
+                <div>
+                    <h3>Stream B: Ingredienti Funzionali</h3>
+                    <p><strong>Descrizione:</strong> Concentrati proteici vegetali ed emicellulosa/zuccheri estratti durante la raffinazione.</p>
+                    <p><strong>Applicazioni:</strong> Materia prima per nutraceutica, cosmetica o industria chimica.</p>
+                </div>
+                <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" class="img-responsive rounded shadow" alt="Lab Process">
+            </div>
+
+            <div class="grid-2 align-center">
+                <div>
+                    <h3>Stream C: Prodotti Alto Consumo</h3>
+                    <p><strong>Descrizione:</strong> Sviluppo di prodotti bio-based e biodegradabili che possano chiudere il cerchio dell'economia circolare.</p>
+                    <p><strong>Applicazioni:</strong> Eventi sociali, vita quotidiana, ufficio.</p>
+                </div>
+                <img src="images/biophiglass.png" class="img-responsive rounded shadow" alt="BioPhi Glass">
+            </div>
+        </div>
+    </section>
+
+    <section id="roadmap" class="section-padding">
+        <div class="container">
+            <div class="section-title">
+                <h2>La Nostra Roadmap</h2>
+            </div>
+            <div class="roadmap-container">
+                <div class="timeline-step">
+                    <h5>Q4 2026</h5>
+                    <p>Primo campione materiale.</p>
+                </div>
+                <div class="timeline-step">
+                    <h5>Q2 2027</h5>
+                    <p>Impianto pilota: 1000 kg/giorno.</p>
+                </div>
+                <div class="timeline-step no-border">
+                    <h5>Q2 2028</h5>
+                    <p>Avvio Bioraffineria Industriale.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <h3>BioPhi</h3>
+            <p>From Nature To Nature</p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/company/biophitaly" target="_blank" class="social-link">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+            </div>
+            <p class="copyright">&copy; 2026 BioPhi. Tutti i diritti riservati.</p>
+        </div>
+    </footer>
+
+</body>
+</html>
