--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
                 <p>Non produciamo manufatti finali, ma semilavorati industriali ad alte prestazioni.</p>
             </div>
 
-            <div class="grid-2 align-center mb-50">
+            <div class="grid-3">
                 <div>
                     <h3>Stream A: Granuli Bioplastici</h3>
                     <p><strong>Descrizione:</strong> Granulo termoplastico (pellet) ottenuto miscelando biomassa trattata con matrici biopolimeriche.</p>
                     <p><strong>Applicazioni:</strong> Stampaggio a iniezione ed estrusione film per packaging compostabile.</p>
                 </div>
-                <img src="images/Compound.JPG" class="img-responsive rounded shadow" alt="Bioplastic Granules">
+                <img src="images/Compound.JPG" class="img-responsive" alt="Bioplastic">
             </div>
 
-            <div class="grid-2 align-center mb-50 flex-reverse">
+            <div class="grid-3">
                 <div>
                     <h3>Stream B: Ingredienti Funzionali</h3>
                     <p><strong>Descrizione:</strong> Concentrati proteici vegetali ed emicellulosa/zuccheri estratti durante la raffinazione.</p>
@@ -150,4 +150,5 @@
 
 </body>
 </html>
+
 
