--- a/index.html
+++ b/index.html
@@ -78,39 +78,45 @@
     </section>
 
     <section id="prodotti" class="section-padding bg-light">
-        <div class="container">
-            <div class="section-title">
-                <h2>Prodotti B2B</h2>
-                <p>Non produciamo manufatti finali, ma semilavorati industriali ad alte prestazioni.</p>
-            </div>
+    <div class="container">
+        <div class="section-title">
+            <h2>Prodotti B2B</h2>
+            <p>Semilavorati industriali ad alte prestazioni per l'economia circolare.</p>
+        </div>
 
-            <div class="grid-3">
-                <div>
-                    <h3>Stream A: Granuli Bioplastici</h3>
-                    <p><strong>Descrizione:</strong> Granulo termoplastico (pellet) ottenuto miscelando biomassa trattata con matrici biopolimeriche.</p>
-                    <p><strong>Applicazioni:</strong> Stampaggio a iniezione ed estrusione film per packaging compostabile.</p>
-                </div>
-                <img src="images/Compound.JPG" class="img-responsive" alt="Bioplastic">
+        <div class="product-row">
+            <div class="product-text">
+                <h3>Stream A: Granuli Bioplastici</h3>
+                <p><strong>Descrizione:</strong> Pellet ottenuto miscelando biomassa con matrici biopolimeriche.</p>
+                <p><strong>Applicazioni:</strong> Packaging compostabile, stampaggio a iniezione.</p>
             </div>
-
-            <div class="grid-3">
-                <div>
-                    <h3>Stream B: Ingredienti Funzionali</h3>
-                    <p><strong>Descrizione:</strong> Concentrati proteici vegetali ed emicellulosa/zuccheri estratti durante la raffinazione.</p>
-                    <p><strong>Applicazioni:</strong> Materia prima per nutraceutica, cosmetica o industria chimica.</p>
-                </div>
-                <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" class="img-responsive rounded shadow" alt="Lab Process">
-            </div>
-
-            <div class="grid-2 align-center">
-                <div>
-                    <h3>Stream C: Prodotti Alto Consumo</h3>
-                    <p><strong>Descrizione:</strong> Sviluppo di prodotti bio-based e biodegradabili che possano chiudere il cerchio dell'economia circolare.</p>
-                    <p><strong>Applicazioni:</strong> Eventi sociali, vita quotidiana, ufficio.</p>
-                </div>
-                <img src="images/biophiglass.png" class="img-responsive rounded shadow" alt="BioPhi Glass">
+            <div class="product-image">
+                <img src="images/Compound.JPG" alt="Stream A">
             </div>
         </div>
+
+        <div class="product-row flex-reverse">
+            <div class="product-text">
+                <h3>Stream B: Ingredienti Funzionali</h3>
+                <p><strong>Descrizione:</strong> Concentrati proteici e zuccheri estratti durante la raffinazione.</p>
+                <p><strong>Applicazioni:</strong> Nutraceutica, cosmetica e industria chimica.</p>
+            </div>
+            <div class="product-image">
+                <img src="https://images.unsplash.com/photo-1532094349884-543bc11b234d?auto=format&fit=crop&w=800&q=80" alt="Stream B">
+            </div>
+        </div>
+
+        <div class="product-row">
+            <div class="product-text">
+                <h3>Stream C: Prodotti Alto Consumo</h3>
+                <p><strong>Descrizione:</strong> Prodotti bio-based e biodegradabili sviluppati con i nostri partner.</p>
+                <p><strong>Applicazioni:</strong> Eventi, vita quotidiana, ufficio.</p>
+            </div>
+            <div class="product-image">
+                <img src="images/biophiglass.png" alt="Stream C">
+            </div>
+        </div>
+    </div>
     </section>
 
     <section id="roadmap" class="section-padding">
@@ -150,5 +156,6 @@
 
 </body>
 </html>
+
 
 
