--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BioPhi - From Nature To Nature</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css?v=3.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -123,3 +123,4 @@
 
 </body>
 </html>
+
